--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -2,14 +2,6 @@ spring:
   application:
     name:
       product-service
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    
-management:  endpoint:    beans:      enabled: true
-      
-  metrics:    web:      server:        request:          autotime:            enabled: true
-    endpoints:    web:      exposure:        include:        - '*'
-      base-path: /product-management
-      
+  cloud:
+    config:
+     uri: http://${config-host:3.87.29.41}:8888
