--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,14 +1,1 @@
-spring:
-  application:
-    name:
-      product-service
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    
-management:  endpoint:    beans:      enabled: true
-      
-  metrics:    web:      server:        request:          autotime:            enabled: true
-    endpoints:    web:      exposure:        include:        - '*'
-      base-path: /product-management
+spring:  application:    name:      product-service  cloud:    config:      uri: http://${host:localhost}:8888eureka:  client:    register-with-eureka: true    fetch-registry: true    management:  endpoint:    beans:      enabled: true        metrics:    web:      server:        request:          autotime:            enabled: true    endpoints:    web:      exposure:        include:        - '*'      base-path: /product-management
